Edited notes are now saved properly

--- a/NevernoteAPI/ClientApp/src/index.html
+++ b/NevernoteAPI/ClientApp/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nevernote</title>
+  <title>Nevernote - Home</title>
   <base href="/">
 
   <meta name="description" content="Let Nevernote change the way you organize your personal and professional projects. Evernote is the only organizer and planner notebook app you need in your life: take notes, create to-do lists, add images, scan documents with your camera, take handwritten notes, make sketches and more! Edit, share and collaborate on your notes automatically between your phone, tablet, and computer.">
